a true draft! about to spell check

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -6,12 +6,14 @@
 \usepackage{titling}
 \usepackage[nottoc]{tocbibind}
 \usepackage{fancyvrb}
-%\setmainfont{Baskerville}
+%\setmainfont{SF Pro Text}
 %\setsansfont{Quadrat-Serial}
 %\setmonofont{Courier New}
 \urlstyle{rm}
 \usepackage[font=footnotesize,labelfont=bf]{caption}
 \numberwithin{equation}{section}
+\loadspellchecklist[en][wordlist.txt]
+\setupspellchecking[state=start]
 
 % changes package, and a bit more room on the right
 \usepackage{todonotes}
