--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
@@ -155,6 +155,7 @@ Transport along the equator:
 \item \( T_1(go):\hgr{wryo}\mapsto \hgr{wgyb} \)
 \item \( T_1(ob):\hgr{wgyb}\mapsto \hgr{woyr} \)
 \end{itemize}
+\label{def:transport_oo}
 \end{mydef}
 
 It's very important to be able to visualize what \( T_1 \) does to triangular paths such as \( wb\cdot br\cdot rw \) (which circulates around the boundary of face \( wbr \)). You can see it if you imagine Figure~\ref{fig:triangle_of_equators} as the frames of a short movie. Or you can place your palm over the top of a cube and note where your fingers are pointing, then slide your hand to an equatorial face, then along the equator, then back to the top. The answer is: you come back rotated clockwise by a quarter-turn, which we saw in Definition~\ref{def:rotation} where it is called \( \hgr{R} \).
