--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -97,6 +97,7 @@
 \newcommand{\mm}{\ensuremath{\mathbb{M}}}
 \newcommand{\const}{\ensuremath{\mathrm{const}}}
 \newcommand{\join}{\ensuremath{*}}
+\newcommand{\xso}{X_\oo^s}
 
 \newcommand{\rr}{\ensuremath{\mathbb{R}}}
 \newcommand{\rrn}{\ensuremath{\mathbb{R}^n}}
