spellchecked. sending to Steve.

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
@@ -10,7 +10,7 @@ The results could be formalized. A good starting point is Lemma~\ref{lem:octahed
 
 Our hope is that this note can form the starting point for a complete formulation of the homotopical results of gauge theory and Chern-Weil theory. Classically we know the space of connections is contractible, and the group of based gauge transformations (see below) acts freely on it. Those statements should be easy to make in our framework. In \cite{atiyah1983yang} connections are presented as a splitting of a short exact sequence of bundles. The community has grappled with this picture (see the nLab at \cite{urs_atiyah}), and it deserves clarification in HoTT.
 
-The paper of Freed and Hopkins\cite{freed2013chernweil} seeks a classifying space for the space of connections on a principal bundle. Their paper served as a primary motivation for this work, and we hope we have taken a step in that direction. Its focus on homotopy theory, model structures, and groupoids should make it accessible to many HoTT theoreticians. We conjecture that the theory of Koszul complexes that arises is the infinitesimal shadow of the higher groupid structure of the relevant HoTT classifying space.
+The paper of Freed and Hopkins\cite{freed2013chernweil} seeks a classifying space for the space of connections on a principal bundle. Their paper served as a primary motivation for this work, and we hope we have taken a step in that direction. Its focus on homotopy theory, model structures, and groupoids should make it accessible to many HoTT theoreticians. We conjecture that the theory of Koszul complexes that arises is the infinitesimal shadow of the higher groupoid structure of the relevant HoTT classifying space.
 
 \subsection{Gauge transformations}
 \begin{mydef}
