--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
@@ -171,7 +171,7 @@ We define the \defemph{rotation} of \( T_{ij} \) by \( \rho_{ij}\defeq T_{ij}X_j
 &=_{T_i} X_i&&\text{by definition of }T
 \end{align*}
 \end{myproof}
-We can obtain a path in \( \Gg(m) \) from a dependent path by again subtracing the basepoint:
+We can obtain a path in \( \Gg(m) \) from a dependent path by again subtracting the basepoint:
 \begin{align*}
 \sigma_{ij}\defeq X_{ij}-X_j&:T_{ji}X_i-X_j=_{\Gg(m)}0 \\
 &:\rho_{ji}=_{\Gg(m)}0.
@@ -317,4 +317,4 @@ To help follow along, in the third line we are showing the results of intermedia
 &= \boxed{gr}
 \end{align*}
 
-So we have these four edges in \( Tw \), which is pointed at \( \xso(w)=r \): \( gobr, gr, gr, gr \). Lemma~\ref{lem:multpath} tells us we can add these by transporting them so as to be concatenatable. This gives \( gobr\cdot rb\cdot bo\cdot og=\refl_g \) in \( Tw \). So the total swirling in the northern hemisphere is trivial. We leave the computation in the southern hemisphere as an exercise, but it is very symmetrical with the northern hemisphere, and gives \( \refl_o \) in \( Ty \).
+So we have these four edges in \( Tw \), which is pointed at \( \xso(w)=r \): \( gobr, gr, gr, gr \). Lemma~\ref{lem:multpath} tells us we can add these by transporting them so as to be concatenate-able. This gives \( gobr\cdot rb\cdot bo\cdot og=\refl_g \) in \( Tw \). So the total swirling in the northern hemisphere is trivial. We leave the computation in the southern hemisphere as an exercise, but it is very symmetrical with the northern hemisphere, and gives \( \refl_o \) in \( Ty \).
