removed last todo; sending to Steve instead of previous commit

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -42,7 +42,7 @@ Type families on higher inductive types such as pushouts can capture homotopical
 This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and other communicators who are carrying the torch of science forward in the spirit of my hero Carl Sagan. I have followed you all for many years, and you have inspired me to continue my studies alongside my career. Thank you.
 \end{dedication}
 
-\listoftodos
+%\listoftodos
 \clearpage
 
 
