added a file for a beamer presentation, and changed the main doc so that the same greg.sty works for both

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -1,6 +1,6 @@
 \ProvidesPackage{greg}[2021/06/06 v1.0 My own macros]
 
-\RequirePackage[margin=1in]{geometry}
+\RequirePackage{geometry}
 %\RequirePackage[utf8]{inputenc}
 \RequirePackage{amsfonts}
 \RequirePackage{amsmath}
@@ -32,8 +32,8 @@
 \RequirePackage{luatex85}
 \RequirePackage[all]{xy}
 
-\RequirePackage{pgfplots}
-\pgfplotsset{compat=1.15}
+%\RequirePackage{pgfplots}
+%\pgfplotsset{compat=1.15}
 
 \graphicspath{ {./img/} }
 
