--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -18,7 +18,7 @@
 \usepackage[commandnameprefix=ifneeded, todonotes={textsize=tiny}]{changes}
 \definechangesauthor[name=Greg, color=blue]{Greg}
 \setlength{\marginparwidth}{1in}
-\geometry{right=1.2in}
+\geometry{margin=1in}
 
 \renewenvironment{abstract}{\section*{\abstractname}}{}
 \titleformat*{\section}{\large\bfseries\itshape}
