--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -12,6 +12,7 @@
 \urlstyle{rm}
 \usepackage[font=footnotesize,labelfont=bf]{caption}
 \numberwithin{equation}{section}
+\graphicspath{ {./img/} }
 
 % changes package, and a bit more room on the right
 \usepackage{todonotes}
