--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -35,7 +35,7 @@
 %\RequirePackage{pgfplots}
 %\pgfplotsset{compat=1.15}
 
-\graphicspath{ {./img/} }
+\newcommand{\hideFromPandoc}[1]{#1}
 
 \usetikzlibrary{arrows.meta,positioning,quotes,cd,calc,shapes,decorations.pathreplacing}
 %%\tikzset{every picture/.append style={line cap=round, line width=1.5pt, {Latex-Latex}}}
